--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html lang="en-us">
+﻿<!DOCTYPE html>
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <script src="scripts/jquery.js"></script>
@@ -28,7 +29,7 @@
         </div>
 
     </form>
-    
+
     <div class="loader-ph"><div class="loader" id="load-spinner" style="display:none"></div></div>
 
     <div class="modal fade" id="errormsg-modal" tabindex="-1" role="dialog" aria-labelledby="errormsgModalLabel" aria-hidden="true">
