Added config, more graceful refresh functionality.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">OpenAPI URL</span>
                 </div>
-                <input type="text" class="form-control" id="api-url" value="http://localhost/DeBIP.Services.CoreAPI/swagger/docs/v1" />
+                <input type="text" class="form-control" id="api-url" value="" />
                 <div class="input-group-append">
                     <button type="button" class="btn btn-sm btn-primary" id="download-btn"><span class="oi oi-reload"></span></button>
                 </div>
