Better consistency for type links, Some optimization for better performance.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="scripts/app.js"></script>
     <link rel="stylesheet" type="text/css" href="content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="content/open-iconic-bootstrap.css" />
+    <link rel="shortcut icon" href="images/favicon-32x32-png.png">
     <!--<link rel="stylesheet" type="text/css" href="content/bootstrap-modal.css" />-->
     <!--<link rel="stylesheet" type="text/css" href="content/bootstrap-toggle.css" />-->
     <link rel="stylesheet" type="text/css" href="content/app.css" />
@@ -27,7 +28,7 @@
                 </div>
             </div>
         </div>
-
+        <!--Here to prevent submit on enter:--> <input type="text" style="display: none;" />
     </form>
 
     <div class="loader-ph"><div class="loader" id="load-spinner" style="display:none"></div></div>
