--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="scripts/jquery.js"></script>
     <script src="scripts/knockout.js"></script>
     <script src="scripts/bootstrap.bundle.min.js"></script>
+    <script src="scripts/showdown.js"></script>
     <script src="scripts/app.js"></script>
     <link rel="stylesheet" type="text/css" href="content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="content/open-iconic-bootstrap.css" />
@@ -26,6 +27,9 @@
                 <div class="input-group-append">
                     <button type="button" class="btn btn-sm btn-primary" id="download-btn"><span class="oi oi-reload"></span></button>
                 </div>
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-sm btn-secondary" id="help-btn"><span class="oi oi-question-mark"></span></button>
+                </div>
             </div>
         </div>
         <!--Here to prevent submit on enter:--> <input type="text" style="display: none;" />
@@ -42,9 +46,17 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    ...
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-body"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
